# kaishin

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md  apm.lock.yaml  apm.yml
.github/workflows/: release.yml
.kata/: applied.toml
src/: lib.rs
