[package]
name = "kaishin"
version = "0.4.1"

edition = "2024"
authors = ["yukimemi"]
license = "MIT"
description = "Universal self-update library for Rust CLIs, extracted from rvpm and renri."
repository = "https://github.com/yukimemi/kaishin"
homepage = "https://github.com/yukimemi/kaishin"
readme = "README.md"
keywords = ["self-update", "cli", "github", "updater"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
self_update = { version = "0.44", default-features = false, features = [
    "reqwest",
    "rustls",
    "compression-flate2",
    "archive-tar",
    "archive-zip",
    "compression-zip-deflate",
] }
semver = "1"
humantime = "2.3.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
dirs = "6.0"
tempfile = "3"
console = "0.16.3"

[dev-dependencies]
tempfile = "3"
