[package]
name = "kaishin"
version = "0.6.0"

edition = "2024"
authors = ["yukimemi"]
license = "MIT"
description = "Universal self-update library for Rust CLIs, extracted from rvpm and renri."
repository = "https://github.com/yukimemi/kaishin"
homepage = "https://github.com/yukimemi/kaishin"
readme = "README.md"
keywords = ["self-update", "cli", "github", "updater"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
self_update = { version = "0.44", default-features = false, features = [
    "reqwest",
    "rustls",
    "compression-flate2",
    "archive-tar",
    "archive-zip",
    "compression-zip-deflate",
] }
semver = "1"
humantime = "2.3.0"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
dirs = "6.0"
tempfile = "3"
console = "0.16.3"
# Cross-process advisory file locking for the background auto-update guard.
# `std::fs::File::try_lock` would do the same but is only stable since Rust
# 1.89, above this crate's MSRV (1.85), so use the crate instead.
fs2 = "0.4.3"

# Windows-only: the self-update confirmation prompt forces cooked console
# input mode (and restores it) so it survives a terminal a prior TUI left in
# raw mode. See the `cooked_input` module in `lib.rs`.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
